--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
  spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
  spring.datasource.url=jdbc:sqlserver://localhost;databaseName=airbnb
- spring.datasource.username=siew_seng_yip
- spring.datasource.password=cedric!-0NG5779765432
+ spring.datasource.username=
+ spring.datasource.password=
